--- a/VD.ipynb
+++ b/VD.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "silent-oregon",
+   "id": "caring-synthesis",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -94,7 +94,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.8.7"
   }
  },
  "nbformat": 4,
