Comentando codigo do comparador

--- a/Comp.ipynb
+++ b/Comp.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "apart-harvey",
    "metadata": {},
    "source": [
     "### Comparador de Tensão CMOS Calibrado por SGA\n",
@@ -29,7 +28,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "signed-police",
    "metadata": {},
    "source": [
     "## Definições de iniciais"
@@ -38,7 +36,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "accompanied-single",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +61,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "handy-marina",
    "metadata": {},
    "source": [
     "## Definição da aptidão\n",
@@ -80,7 +76,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "incoming-novelty",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +89,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "indirect-fruit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +132,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "efficient-terrace",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,65 +145,112 @@
   },
   {
    "cell_type": "markdown",
-   "id": "optimum-fiber",
    "metadata": {},
    "source": [
     "## Algorítmo Genético Simples (SGA)\n",
     "\n",
     "O SGA se divide nas seguintes etapas:\n",
     "\n",
-    "* Avaliação\n",
-    "* Seleção dos pais\n",
+    "* Avaliação:\n",
+    "    * Os individuos são ordenados de forma decrescente por aptidão\n",
+    "* Seleção dos pais:\n",
+    "    * Os k individuos com maior aptidão são selecionados para fazer parte do conjunto de possíveis pais\n",
     "* Cruzamento\n",
-    "* Mutação"
+    "    * 2 pais são selecionados aleatóriamente e um novo indivíduo (filho) é gerado a partir deles\n",
+    "    * Cada parâmetro (Ws, Ls e Vbias) do filho é a média dos respectivos parâmetros dos pais\n",
+    "    * Os filhos gerados pelo cruzamento substituem a população da geração anterior\n",
+    "* Mutação\n",
+    "    * Após o cruzamento, para cada indíduo, há chance de um ou mais parâmetros serem modificados\n",
+    "    * Caso seja modificado, o parâmetro é acrescido de um falor aleatório entre -max_inc e max_inc\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 229,
-   "id": "beneficial-fields",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Simple Genetic Algorithm\n",
+    "\n",
+    "#Xs: individuos\n",
+    "#gens: gerações\n",
+    "#k: numero de melhores individuos que poderão ser pais\n",
+    "#mu: numero de individuos por geração\n",
+    "#max_inc: valores máximos de incremento na mutação\n",
+    "#target: tensão de limiar alvo do comparador\n",
+    "#n_params: numero de parametros que cada indivíduo representa\n",
+    "#limits: valores limite para os parâmetros\n",
+    "#mut_rate: taxa de mutação\n",
+    "\n",
     "def SGA (Xs, gens, k, mu, max_inc, target, n_params, limits, mut_rate):\n",
+    "    \n",
+    "    # Declaração dos vetores que seão utilizados em todas as gerações para evitar\n",
+    "    # re-alocar memória a cada iteração do loop (faz mais diferença quando o tempo de execução\n",
+    "    # não é dominado pela função custo)\n",
+    "    \n",
+    "    # k melhores individuos, possíveis pais\n",
     "    parents = np.zeros((k, n_params+1))\n",
+    "    \n",
+    "    # Dupla de pais utilzada na mutação\n",
     "    p1 = np.zeros((n_params+1,))\n",
     "    p2 = np.zeros((n_params+1,))\n",
+    "    \n",
+    "    # Melhor Indivíduo\n",
+    "    bestX = np.zeros((n_params+1,))\n",
+    "    bestS = 0\n",
+    "    \n",
+    "    # histórico da melhor aptidão em cada geração\n",
     "    Jhist = np.zeros((gens,))\n",
+    "    \n",
+    "    # aptidões de cada indivído em uma dada geração\n",
     "    scores = np.zeros((mu,))\n",
-    "    freqs = np.zeros((mu,))\n",
+    "    \n",
     "    for gen in range(0, gens):\n",
+    "        \n",
+    "        # Avaliação\n",
+    "        # Para cada indivíduo, calcular a aptidão\n",
     "        for i in range(0, mu):\n",
     "            scores[i] = calc_fitness(Xs[i, :], target)\n",
+    "            if scores[i] > bestS:\n",
+    "                bestS = scores[i]\n",
+    "                bestX = Xs[i, :]\n",
     "        \n",
-    "        \n",
+    "        # A maior aptidão é guardada\n",
     "        maxIdx = np.argmax(scores)\n",
     "\n",
     "        Jhist[gen] = scores[maxIdx]\n",
     "        \n",
     "        # Selecao dos Pais\n",
+    "        # k melhores indivíduos se tornam possíveis pais\n",
     "        topIdx = np.argsort(scores)[::-1]\n",
-    "\n",
     "        for i in range(0, k):\n",
     "            for j in range(0, n_params+1):\n",
     "                parents[i, j] = Xs[topIdx[i], j]\n",
     "        \n",
     "        # Crossover\n",
+    "        # Dois dentre os possíveis pais são selecionados aleatoriamente\n",
     "        for i in range(0, mu):\n",
     "            r1 = np.random.randint(0, k)\n",
     "            r2 = np.random.randint(0, k)\n",
+    "            \n",
+    "            # Cada parâmetro do indivíduo resultante é a média dos parâmetros dos pais\n",
     "            for j in range(0, n_params+1):\n",
     "                Xs[i, j] = parents[r1, j]/2 + parents[r2, j]/2\n",
     "        \n",
-    "        # Mutacao\n",
+    "        # Mutação\n",
     "        for i in range(0, mu):\n",
+    "            # Mutação apenas dos Ws e Ls\n",
+    "            # Para os Ws e Ls o incremento e limites é diferente\n",
     "            for j in range(0, n_params):\n",
     "                if np.random.rand() <= mut_rate:\n",
     "                    increment = np.random.uniform(-max_inc[0], max_inc[0])\n",
     "                    Xs[i, j] += increment\n",
+    "                    \n",
+    "                    # Caso o parâmetro fique fora dos limites, força a voltar \"rebatendo\" o incremento\n",
     "                    if Xs[i, j] < limits[0, 0] or Xs[i, j] > limits[0, 1]:\n",
     "                        Xs[i, j] -= 2*increment\n",
     "                        \n",
+    "            # Mutação apenas do Vbias\n",
     "            if np.random.rand() <= mut_rate:\n",
     "                increment = np.random.uniform(-max_inc[1], max_inc[1])\n",
     "                Xs[i, n_params] += increment\n",
@@ -218,17 +258,31 @@
     "                    Xs[i, n_params] -= 2*increment\n",
     "                    \n",
     "        \n",
-    "    # Pontuacao\n",
+    "    # Na ultima interação, recalcular as aptidões por conta da mutação que ocorreu\n",
+    "    # no final do último loop\n",
     "    for i in range(0, mu):\n",
     "        scores[i] = calc_fitness(Xs[i, :], target)\n",
-    "    maxIdx = np.argmax(scores)\n",
-    "    return scores[maxIdx], Xs[maxIdx, :], Jhist"
+    "        if scores[i] > bestS:\n",
+    "            bestS = scores[i]\n",
+    "            bestX = Xs[i, :]\n",
+    "    \n",
+    "    # Retorna respectivamente, \n",
+    "    # a maior aptidão ao final das iterações, \n",
+    "    # o melhor indivído ao final das iterações, \n",
+    "    # o histórico de melhores aptidões de cada geração\n",
+    "    return bestS, bestX, Jhist"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Execução do SGA em si"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 230,
-   "id": "civil-syracuse",
    "metadata": {},
    "outputs": [
     {
@@ -249,33 +303,46 @@
     }
    ],
    "source": [
+    "# Definição dos parâmetros\n",
+    "\n",
+    "# Número de vezes que o algorítmo será executado\n",
     "runs = 10\n",
+    "\n",
     "mu = 10\n",
     "gens = 50\n",
     "k = 2\n",
     "mut_rate = 0.8\n",
     "target = 1\n",
     "n_params = 4\n",
+    "\n",
+    "# Limites do incremento a cada mutação para Ws/Ls e Vbias\n",
     "max_inc = [0.3, 0.1]\n",
+    "\n",
+    "# Valores limites de Ws/Ls e Vbias\n",
     "limits = np.array([[1, 10], [0.5, Vdd]])\n",
     "\n",
+    "# Valores de retorno da função SGA ao longo de \"run\" execuções\n",
     "allX = np.zeros((runs, n_params+1))\n",
     "allS = np.zeros((runs, 1))\n",
     "allJ = np.zeros((runs, gens))\n",
+    "\n",
+    "# Contadores simples do progresso da execução\n",
     "progress = 0\n",
     "progress_t = 0\n",
     "\n",
     "for j in range(0, runs):\n",
+    "    \n",
+    "    # Fixar a semente em cada rodada para que os resultados sejam reprodutíveis\n",
     "    np.random.seed(j)\n",
     "\n",
+    "    # População inicial aleatória denetro dos valores limite\n",
     "    Xs = np.random.uniform(limits[0, 0],limits[0, 1], (mu, n_params+1))\n",
     "    Xs[:, n_params] = np.random.uniform(limits[1, 0],limits[1, 1], (1, mu))\n",
     "     \n",
+    "    # Execução de uma rodada do SGA\n",
     "    minS, minX, Jhist = SGA(Xs, gens, k, mu, max_inc, target, n_params, limits, mut_rate)\n",
-    "#     print(minX)\n",
     "    allX[j, :] = minX\n",
     "    allS[j] = minS\n",
-    "#     print(minS)\n",
     "    allJ[j, :] = Jhist.ravel()\n",
     "    progress += 1\n",
     "    progress_t += 1\n",
@@ -286,9 +353,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Histórico de Aptidões"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 231,
-   "id": "flying-russell",
    "metadata": {},
    "outputs": [
     {
@@ -307,13 +380,24 @@
    "source": [
     "for i in range(0, runs):\n",
     "    plt.plot(allJ[i, :])\n",
+    "plt.title(\"Historico da maior aptidão\")\n",
+    "plt.xlabel(\"Geração\")\n",
+    "plt.ylabel(\"Aptidão\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Vizualização do Melhor Resultado\n",
+    "\n",
+    "Observa todas as rodadas e simula o circuito para o melhor indivíduo dentro dessas rodadas"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 232,
-   "id": "bound-proportion",
    "metadata": {},
    "outputs": [
     {
@@ -339,20 +423,24 @@
     }
    ],
    "source": [
+    "# Melhor x dentre todas as rodadas\n",
     "bestX = allX[np.argmax(allS), :]\n",
     "\n",
-    "\n",
+    "# Simulação com os melhores parâmetros\n",
     "vin, vout = simulate(bestX)\n",
-    "plt.plot(vout)\n",
-    "plt.plot(vin)\n",
     "target_wave = (vin > target)*Vdd\n",
-    "plt.plot(target_wave)\n",
     "\n",
-    "# print(1/np.sqrt(np.mean((vout-target_wave)**2)))\n",
+    "# Plot\n",
+    "plt.plot(vin)\n",
+    "plt.plot(vout)\n",
+    "plt.plot(target_wave)\n",
+    "plt.legend(['Vin', 'Vout', 'Saida Ideal'])\n",
+    "plt.ylabel(\"Tensão (V)\")\n",
+    "plt.xlabel(\"Passos de simulação\")\n",
+    "plt.grid()\n",
     "plt.show()\n",
-    "print(calc_fitness(x2, target))\n",
-    "print(calc_fitness(bestX, target))\n",
-    "print(bestX)"
+    "print(\"Melhor Aptidão: \", calc_fitness(bestX, target))\n",
+    "print(\"Melhor Indivíduo: \", bestX)"
    ]
   }
  ],
@@ -372,7 +460,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.7"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
